Fix Bluesky icon size, alignment, and color
- Use correct Bluesky butterfly SVG with proper aspect ratio
- Scale icon to match other social icons (0.85em)
- Adjust vertical alignment (-0.15em)
- Change color from black (#333) to flatly theme blue (#2c3e50)

--- a/themes/pelican-bootstrap3/static/css/style.css
+++ b/themes/pelican-bootstrap3/static/css/style.css
@@ -241,14 +241,18 @@ figure.floatcenter, .align-center {
 }
 
 /* Bluesky butterfly icon (Font Awesome 4.x doesn't have it) */
+.fa-bluesky {
+    font-size: 0.85em;
+    vertical-align: baseline;
+}
 .fa-bluesky:before {
     content: "";
     display: inline-block;
-    width: 1em;
-    height: 1em;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 576 512'%3E%3Cpath fill='%23333333' d='M407.8 294.7c-3.3-.4-6.7-.8-10-1.3 3.4.4 6.7.9 10 1.3zm-45.1 5.7c-17.6.1-35.2-2.2-52.3-6.8 14.8 4.6 30.4 7.1 46.3 6.9h.1c1.9 0 3.9-.1 5.9-.1zm-153.8-5.7c3.3.4 6.7.8 10 1.3-3.3-.5-6.7-.9-10-1.3zm45.1 5.7c-15.9.1-31.5-2.3-46.3-6.9 17.1 4.6 34.7 6.9 52.3 6.8-2 0-4 .1-5.9.1h-.1zm163.4-13.4c35.5-11.9 65.4-36.4 83.3-68.5 31.4-56.4 22.2-128-29.2-172.2-6.2-5.3-12.7-10.1-19.5-14.3-51-31.8-118.1-31.3-168.6 1.3-5.6 3.6-11 7.6-16.1 11.9-18.9 15.6-33.4 35.3-42.8 57.5l-4.4 10.5-4.4-10.5c-9.4-22.2-23.9-41.9-42.8-57.5-5.1-4.3-10.5-8.3-16.1-11.9-50.5-32.6-117.6-33.1-168.6-1.3-6.8 4.2-13.3 9-19.5 14.3-51.4 44.2-60.6 115.8-29.2 172.2 17.9 32.1 47.8 56.6 83.3 68.5 5.3 1.8 10.7 3.3 16.1 4.6-2.2 8.9-3.5 18.1-3.5 27.6 0 51.4 33.4 95 79.8 110.3-4.3-23.4 4.5-47.9 23.9-64.2 16.6-13.9 38.7-19.4 59.8-14.9 16.4 3.5 31.1 13.1 40.8 26.7l18.5 25.8 18.5-25.8c9.7-13.6 24.4-23.2 40.8-26.7 21.1-4.5 43.2 1 59.8 14.9 19.4 16.3 28.2 40.8 23.9 64.2 46.4-15.3 79.8-58.9 79.8-110.3 0-9.5-1.3-18.7-3.5-27.6 5.4-1.3 10.8-2.8 16.1-4.6z'/%3E%3C/svg%3E");
+    width: 1.33em;
+    height: 1.17em;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 568 501'%3E%3Cpath fill='%232c3e50' d='M123.121 33.664C188.241 82.553 258.281 181.68 284 234.873c25.719-53.192 95.759-152.32 160.879-201.21C491.866-1.611 568-28.906 568 57.947c0 17.346-9.945 145.713-15.778 166.555-20.275 72.453-94.155 90.933-159.875 79.748C507.222 323.8 536.444 388.56 473.333 453.32c-119.86 122.992-172.272-30.859-185.702-70.281-2.462-7.227-3.614-10.608-3.631-7.733-.017-2.875-1.169.506-3.631 7.733-13.43 39.422-65.842 193.273-185.702 70.281-63.111-64.76-33.889-129.52 80.986-149.071-65.72 11.185-139.6-7.295-159.875-79.748C9.945 203.659 0 75.291 0 57.946 0-28.906 76.135-1.612 123.121 33.664Z'/%3E%3C/svg%3E");
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    vertical-align: middle;
+    vertical-align: -0.15em;
 }
